cluster-config/base/default-deny-ciliumclusterwidenetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny
spec:
  egress:
  - {}
  ingress:
  - {}
  endpointSelector: {}
